# TER_Recalage_multi_points

./: Rapport-TER.odt  Rappport-TER.odt  annexes.odt  utils_pcl.h
IncrementallyRegister/: CMakeCache.txt  Makefile  cmake_install.cmake  pairwise_incremental_registration.cpp
IterativeClosestPoint/: CMakeCache.txt  Makefile  cmake_install.cmake  main.cpp
Rapports et diapos/: Diapositive_TER.odp  Rapport-TER_versionJustifie.odt
STLToPCD/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  manager
Tests/ELCH/: CMakeLists.txt  main.cpp
Tests/FPCS/: CMakeLists.txt  main.cpp  utils_pcl.h
Tests/GeneralizedICP/: CMakeLists.txt  main.cpp  utils_pcl.h
Tests/Hausdorff/: compute_hausdorff.cpp
Tests/ICP/: CMakeLists.txt  interactiveICP.cpp  main.cpp  utils_pcl.h
Tests/ICPNL/: CMakeLists.txt  main.cpp
Tests/ICPWithNormal/: CMakeLists.txt  main.cpp  utils_pcl.h
Tests/IncrementalRegistration/: CMakeLists.txt  main.cpp
Tests/JointICP/: CMakeLists.txt  main.cpp  utils_pcl.h
Tests/KFPCS/: CMakeLists.txt  main.cpp  utils_pcl.h
Tests/LUM/: CMakeLists.txt  main.cpp
Tests/MetaRegistration/: CMakeLists.txt  main.cpp
Tests/Pairwise/: main.cpp  utils_pcl.h
Tests/SampleConsensus/: CMakeLists.txt  main.cpp  utils_pcl.h
Tests/testRegistration/: CMakeLists.txt  test_registration.cpp
Tutos/Hausdorff/: CMakeLists.txt
Tutos/IncrementallyRegister/: CMakeLists.txt
Tutos/IterativeClosestPoint/: CMakeLists.txt  exempleType.cpp
Tutos/Pairwise/: CMakeLists.txt  main.cpp  utils_pcl.h
Tutos/interactiveIterativeClosestPoint/: CMakeLists.txt  main.cpp  monkey.ply  oldMain.cpp
Tutos/normalDistributionsTransform/: CMakeLists.txt  main.cpp
Tutos/robustPoseEstimationOfRigidObjects/: main.cpp
Vizu/: CMakeLists.txt  compare2Clouds.cpp  vizu  vizu.cpp  vizuCC  vizuDS  vizuDownSample.cpp
interactiveIterativeClosestPoint/: CMakeCache.txt  Makefile  cmake_install.cmake  exemple.cpp  exempleTest.cpp  interactive_icp  main.cpp
normalDistributionsTransform/: main.cpp
robustPoseEstimationOfRigidObjects/: CMakeLists.txt
